 * Update usages of [Get-PerformanceCounters](http://get-carbon.org/help/Get-TrustedHosts.html) to handle nothing/`null` or a single object output instead of an empty/single element array when there are no or one performance counters.  This function used to always return an array.
 
## Bug Fixes
 * [Install-Service](http://get-carbon.org/help/Install-Service.html) not granting default service identity, Network Service, the correct permissions.
 * [Install-Service](http://get-carbon.org/help/Install-Service.html) not correctly resolving local identity account names.
 
## Enhancements
 * Created new [Get-WindowsFeature](http://get-carbon.org/help/Get-WindowsFeature.html) function for getting a list of available Windows features.
 * [Test-WindowsFeature](http://get-carbon.org/help/Test-WindowsFeature.html) now tests if a Windows feature exists, instead of if it is installed.  Added an `Installed` switch to detect if a feature exists *and* if it is installed.
 * `Install-WindowsFeatures` renamed to [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).
 * Renamed [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html)'s `Features` parameter to `Name`.
 * Removed `Install-WindowsFeatureIis` and replaced with `Iis` and `IisHttpRedirection` switches on [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).
 * Removed `Install-WindowsFeatureMsmq` and replaced with `Msmq`, `MsmqHttpSupport`, and `MsmqActiveDirectoryIntegration` switches on [Install-WindowsFeature](http://get-carbon.org/help/Install-WindowsFeature.html).
 * `Uninstall-WindowsFeatures` renamed to [Uninstall-WindowsFeature](http://get-carbon.org/help/Uninstall-WindowsFeature.html).
 * Renamed [Uninstall-WindowsFeature](http://get-carbon.org/help/Uninstall-WindowsFeature.html)'s `Features` parameter to `Name`.