@@ -28,6 +28,7 @@ This release contains many backwards incompatible changes.  Take the following s
  * Replace usages of `Remove-IisWebsite` with [Uninstall-IisWebsite](http://get-carbon.org/help/Uninstall-IisWebsite.html).
  * [Get-TrustedHosts](http://get-carbon.org/help/Get-TrustedHosts.html) no longer returns an empty list if there are no trusted hosts.  It now return nothing/`null`.  Update usages accordingly.
  * Update usages of [Get-PerformanceCounters](http://get-carbon.org/help/Get-TrustedHosts.html) to handle nothing/`null` or a single object output instead of an empty/single element array when there are no or one performance counters.  This function used to always return an array.
+ * [Split-Ini](http://get-carbon.org/help/Split-Ini.ps1) now returns objects for each INI file by default. Replace usages of `Split-Ini -Path <string>` with `Split-Ini -Path <string> -AsHashtable` to get the old behavior.  Replace usages of `Split-Ini -Path <string> -PassThru` with `Split-Ini -Path <string>`.
  
 ## Bug Fixes
  * [Install-Service](http://get-carbon.org/help/Install-Service.html) not granting default service identity, Network Service, the correct permissions.
@@ -80,6 +81,8 @@ This release contains many backwards incompatible changes.  Take the following s
  * Created function [Uninstall-IisAppPool](http://get-carbon.org/help/Uninstall-IisAppPool.html) for removing an IIS application pool.
  * [Install-IisAppPool](http://get-carbon.org/help/Install-IisAppPool.html) now starts an IIS application pool if it is stoppped.
  * [Split-Ini](http://get-carbon.org/help/Split-Ini.html) now returns strongly-typed `Carbon.Ini.IniNode` objects instead of hashtables.
+ * The line numbers returned by [Split-Ini](http://get-carbon.org/help/Split-Ini.html) start at 1 instead of 0.
+ * [Split-Ini](http://get-carbon.org/help/Split-Ini.html) now returns name/value objects by default (the `PassThru` switch is no longer needed for this behaviro).  This makes it more PowerShell-y.  The old behavior of returning a `Hashtable` is available be using the new `AsHashtable` switch.
  
  
 # 0.4.0.1 (18 December 2012)
